# raven

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bundle.wxs  linguist.yml  mkdocs.yml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  static.yml  web-deploy.yml
benchmarks/compile-time/: README.md  generate.sh  run.ps1  run.sh
docs/: PRODUCTION_ROADMAP.md  README.md  RVPM_DESIGN.md  STDLIB_SPEC.md  execution_trace.md  index.md  memory_execution.md  syntax.md
docs/development/: contributing.md
docs/examples/: basic.md
docs/getting-started/: installation.md  quick-start.md  rvpm-and-format.md
docs/language-reference/: data-types.md
docs/resources/: vscode-extension.md
docs/standard-library/: overview.md
docs/v1/: about.md
docs/v2/: 2026-05-22-v2-roadmap.md  README.md  migration.md
examples/: README.md  arithmetic.rv  battle_simulator.rv  boolean_logic.rv  boolean_logic.rv.out  builtins_fs.rv  builtins_fs.rv.out  builtins_pure.rv  builtins_pure.rv.out  comprehensive.rv  comprehensive.rv.out  conditionals.rv  enum_demo.rv  enum_demo.rv.out  execution_demo.rv  fibonacci.rv  functions.rv  hello.rv  loops.rv  mega_calculator.rv  mega_calculator_simple.rv  network_http_smoke.rv  prime_analyzer.rv  prime_analyzer_simple.rv  simple_calculator.rv  standard_library_demo.rv  tcp_listen_smoke.rv  test_format_write.rv  test_format_write.rv.out  test_suite.rv  test_write_file.rv  tls_client.rv  ultimate_showcase.rv  working_calculator.rv
examples/v2/: angle_shift_disambiguation.rv  angle_shift_disambiguation.rv.out  arithmetic.rv  arithmetic.rv.out  assoc_fn.rv  boolean_logic.rv  builtin_method.rv  calculator.rv  char_in_interpolation.rv  char_in_interpolation.rv.out  closure_arg.rv  closure_capture.rv  closure_captures_self.rv  closure_captures_self.rv.out  closure_generic_call.rv  closure_value.rv  collection_eq.rv  collection_eq.rv.out  comprehensive.rv  comprehensive.rv.out  concurrency_parallel.rv  concurrency_select.rv  concurrency_sync.rv  concurrent_blocking_goroutines.rv  conditionals.rv  conditionals.rv.out  const_wrapping_arithmetic.rv  const_wrapping_arithmetic.rv.out  counter_for_eval_order.rv  counter_for_eval_order.rv.out  deep_nesting.rv  defer_early_return.rv  defer_nested.rv  defer_order.rv  derive_enum_json_arity.rv  derive_enum_json_arity.rv.out  derive_eq.rv  derive_eq.rv.out  derive_ord.rv  derive_ord.rv.out  (+277 more)
lib/: README.md  collections.rv  collections_fixed.rv  filesystem.rv  json.rv  math.rv  math_minimal.rv  network.rv  str.rv  string.rv  testing.rv  time.rv  web.rv
raven-runtime/: Cargo.toml
raven-runtime/src/: ffi_test.rs  gc.rs  lib.rs  object.rs  reflect.rs  roots.rs  sched.rs  stw.rs  tls.rs
raven-runtime/src/object/: boxed.rs  closure.rs  hash.rs  list.rs  map.rs  set.rs  string.rs  structval.rs
raven-runtime/tests/: abi.rs  gc.rs  object_layouts.rs
raven-vscode/: .gitignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  sample.rv
raven-vscode/icons/: raven-icon-theme.json
raven-vscode/snippets/: raven.json
raven-vscode/src/: extension.ts
raven-vscode/syntaxes/: raven.tmLanguage.json
src/: ast.rs  code_gen.rs  doc.rs  error.rs  format.rs  lexer.rs  lib.rs  main.rs  parser.rs  paths.rs  repl.rs  span.rs  type_checker.rs  workspace.rs
src/ast/: decl.rs  expr.rs  mod.rs  pattern.rs  pretty.rs  stmt.rs  ty.rs
src/code_gen/: array_ops.rs  binop.rs  calls.rs  mod.rs  modules.rs  stmt.rs  tests.rs  value.rs
src/codegen/: context.rs  function.rs  intrinsics.rs  layout.rs  linker.rs  mod.rs  tests.rs
src/driver/: mod.rs
src/format/: comments.rs  mod.rs  tests.rs
src/hir/: decl.rs  expr.rs  mod.rs  pattern.rs  pretty.rs  stmt.rs  tests.rs  ty.rs
src/lexer/: mod.rs  tests.rs
src/lock/: mod.rs
src/macros/: mod.rs  tests.rs
src/manifest/: init.rs  mod.rs
src/mir/: builder.rs  intrinsics.rs  ir.rs  mod.rs  mono.rs  pretty.rs  tests.rs  ty.rs
src/ops/: dist.rs  mod.rs
src/parser/: decl.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  tests.rs  ty.rs
src/pkg/: mod.rs
src/resolve/: bindings.rs  derive.rs  imports.rs  items.rs  mod.rs  scope.rs  stdlib.rs  tests.rs  walk.rs
src/tycheck/: builtin.rs  collect.rs  env.rs  expr.rs  infer.rs  match_check.rs  mod.rs  pattern.rs  stmt.rs  tests.rs  ty.rs  unify.rs  wf.rs
src/type_checker/: binop.rs  expr.rs  mod.rs  modules.rs  stmt.rs  tests.rs  type_repr.rs
stdlib/std/: cmp.rv  collections.rv  core.rv  encoding.rv  env.rv  error.rv  ffi.rv  fmt.rv  fs.rv  hash.rv  http.rv  io.rv  iter.rv  json.rv  list.rv  math.rv  net.rv  option.rv  path.rv  process.rv  random.rv  regex.rv  string.rv  sync.rv  test.rv  time.rv  tls.rv
tests/: codegen_smoke.rs  concurrency_soak.rs  fmt_golden.rs  gc_rooting_stress.rs  golden.rs  hir_golden.rs  mir_golden.rs  parser_golden.rs  resolver_golden.rs  rvpm_build.rs  rvpm_commands.rs  rvpm_fetch.rs  rvpm_fmt.rs  rvpm_init.rs  rvpm_workspace.rs  samples.md  tycheck_golden.rs
tests/fmt_corpus/: comments.rv  comments.rv.fmt  control_flow.rv  exprs.rv.fmt  functions.rv  functions.rv.fmt  macros.rv  macros.rv.fmt  types.rv  types.rv.fmt
tests/hir_corpus/: compound_assign.rv  compound_assign.rv.hir  for_loop.rv  for_loop.rv.hir  if_as_expr.rv  if_as_expr.rv.hir  interpolation.rv  interpolation.rv.hir  match_as_expr.rv  match_as_expr.rv.hir  range.rv  range.rv.hir  try_option.rv  try_option.rv.hir  try_result.rv  try_result.rv.hir
tests/mir_corpus/: branchy.rv  branchy.rv.mir  generic_call.rv  generic_call.rv.mir  loop_while.rv  loop_while.rv.mir  stores.rv  stores.rv.mir  trait_method.rv  trait_method.rv.mir
tests/parser_corpus/: arithmetic.rv  arithmetic.rv.ast  control_flow.rv  control_flow.rv.ast  enum_and_match.rv  enum_and_match.rv.ast  generics.rv  (+10 more)
web/: .gitignore  .ufazien.json  .ufazienignore  README.md  deploy.py  index.html  script.js  style.css
wix/: License.rtf  bundle.wxs  main.wxs
(+237 files in other folders)
