[workspace]
members = [".", "raven-runtime"]

[workspace.package]
version = "2.0.0-dev"
edition = "2021"
authors = ["martian56"]
license = "MIT"
repository = "https://github.com/martian56/raven"

[package]
name = "raven"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A modern compiled programming language (v2 in development)"
homepage = "https://raven.ufazien.com"
keywords = ["programming", "language", "compiler"]
categories = ["development-tools", "command-line-utilities"]

# Packaging metadata (deb / rpm / wix) intentionally omitted while v2 is under construction.
# It will be repopulated alongside the v2 tooling work once the stdlib and rvpm shape settle.

[dependencies]
# Cranelift is the codegen backend (issue #63).
cranelift-codegen = "0.108"
cranelift-frontend = "0.108"
cranelift-module = "0.108"
cranelift-object = "0.108"
target-lexicon = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
