[workspace]
members = [".", "raven-runtime"]

[workspace.package]
version = "2.0.0-dev"
edition = "2021"
authors = ["martian56"]
license = "MIT"
repository = "https://github.com/martian56/raven"

[package]
name = "raven"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A modern compiled programming language (v2 in development)"
homepage = "https://raven.ufazien.com"
keywords = ["programming", "language", "compiler"]
categories = ["development-tools", "command-line-utilities"]

# Packaging metadata (deb / rpm / wix) intentionally omitted while v2 is under construction.
# It will be repopulated alongside the v2 tooling work once the stdlib and rvpm shape settle.

[[bin]]
name = "raven"
path = "src/main.rs"

[[bin]]
name = "rvpm"
path = "src/bin/rvpm.rs"

[dependencies]
# Cranelift is the codegen backend (issue #63).
cranelift-codegen = "0.108"
cranelift-frontend = "0.108"
cranelift-module = "0.108"
cranelift-native = "0.108"
cranelift-object = "0.108"
# Locates the MSVC `link.exe` toolchain via the Windows registry so the
# driver can link Cranelift's MSVC-flavor objects on windows-msvc hosts.
cc = "1.2"
# Supplies the host target triple to key linker selection.
target-lexicon = "0.12"
# rv.toml manifest parsing for the rvpm package manager.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
